--- a/registration/registration.html
+++ b/registration/registration.html
@@ -15,7 +15,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script>
         $(function () {
-            $("#footer").load("footer.html");
+            $("#footer").load("../footer.html");
         });
     </script>
     <title>Maze Bank</title>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="flex">
-                <button style="margin-bottom: 10px;" class="btn-med" type="submit">Sign Up</button>
+                <button style="margin-bottom: 10px;margin-top: 25px;" class="btn-sign" type="submit">Sign Up</button>
                 <a class="new-account" href="sign-in.html">Have an Account?</a>
             </div>
         </form>
