--- a/registration/sign-in.html
+++ b/registration/sign-in.html
@@ -15,7 +15,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script>
         $(function () {
-            $("#footer").load("footer.html");
+            $("#footer").load("../footer.html");
         });
     </script>
     <title>Maze Bank</title>
@@ -25,7 +25,8 @@
     <header>
         <div class="container">
             <a class="logo" href="../index.html">MaZe Bank</a>
-        </div>    </header>
+        </div>
+    </header>
     <main class="form">
         <form action="admin-page.html" method="post" class="form-body">
             <h1> Maze ID</h1>
@@ -34,10 +35,10 @@
                 <input type="email" required>
                 <label for="password">Password</label>
                 <input type="password" minlength="8" required>
+                <a style="margin-top: -20px;" href="">Forgot Password?</a>
             </div>
             <div class="flex">
-                <a href="">Forgot Password?</a>
-                <button style="margin-bottom: 10px;" class="btn-med" type="submit">LOG IN</button>
+                <button style="margin-bottom: 10px; margin-top: 20px;" class="btn-sign" type="submit">LOG IN</button>
                 <a class="new-account" href="registration.html">Create New Account?</a>
             </div>
         </form>
